--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <!-- declare as html + root element of an HTML page -->
+  <head> <!-- meta-information about the HTML document, e.g. title, css -->
     <bds />
-    <link rel="stylesheet" href="index.css" />
-    <script src="index.js" defer></script>
-    <title>BigDevSoon - Business Card Project</title>
+    <link rel="stylesheet" href="index.css" /> <!-- index.css is the stylesheet for this webpage -->
+    <script src="index.js" defer></script> <!-- index.js is the Javascript for this webpage -->
+    <title>BigDevSoon - Business Card Project</title> <!-- title, sets the tab name -->
   </head>
-  <body>
-    <!-- Place below is for your own exciting code -->
-    <p>Time to write some code! 👀</p>
-    <!-- Change the [ME] part to your own name/GitHub link -->
-    <div class="footer">
-      <a href="https://bigdevsoon.me" target="_blank" rel="noopener noreferrer"
-        >Project by BigDevSoon</a
-      >
-      |
-      <span>Built with ❤️ by [ME]</span>
+  <div class="page-background">
+    <div class="bds-card">
     </div>
-  </body>
+  </div>
 </html>
